fixed left overflow

--- a/src/routes/timeline/Timeline.scss
+++ b/src/routes/timeline/Timeline.scss
@@ -27,6 +27,7 @@
   align-items: center;
   display: flex;
   justify-content: space-around;
-  max-width: 100vw;
+  margin: 0 auto;
+  max-width: 94vw;
   min-height: 50vh;
 }
